# customer-churn

./: .gitignore  README.md  dockerfile  mlruns_report.txt  pyproject.toml
.github/workflows/: ci.yml
.gradio/flagged/: dataset1.csv
notebooks/: eda.ipynb
scripts/: run_pipeline.py
src/app/: app.py  testapi.py
src/models/: evaluate.py  train.py  tune.py
src/serving/: inference.py
src/serving/model/57af65edfbd1468c9f012f10332f5029/: meta.yaml
src/serving/model/57af65edfbd1468c9f012f10332f5029/artifacts/: best_params.json  preprocessing.pkl
src/serving/model/57af65edfbd1468c9f012f10332f5029/artifacts/model/: MLmodel  model.pkl
src/serving/model/57af65edfbd1468c9f012f10332f5029/metrics/: accuracy  data_quality_pass  f1_churn_1  precision_churn_1  pred_time  recall  roc_auc  train_time
src/serving/model/57af65edfbd1468c9f012f10332f5029/outputs/m-decdbc9124c6460e8ed34fd7f51d14b3/: meta.yaml
src/serving/model/57af65edfbd1468c9f012f10332f5029/params/: colsample_bytree  learning_rate  min_split_gain  reg_alpha  reg_lambda  subsample  threshold
src/serving/model/57af65edfbd1468c9f012f10332f5029/tags/: mlflow.runName  mlflow.source.git.commit
src/utils/: validate_data.py
tests/: conftest.py  test_validate_data.py
